--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title></title><meta charset="UTF-8"><link rel="stylesheet" href="/src.58035d2a.css"></head><body> <div id="app"> <canvas id="stage"></canvas> </div> <script src="/src.e067a775.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="src.58035d2a.css">
+</head>
+
+<body>
+    <div id="app"> <canvas id="stage"></canvas> </div>
+    <script src="src.e067a775.js"></script>
+</body>
+
+</html>
